# sway-workspace-extras

./: Cargo.toml  README.md  flake.nix
.github/: renovate.json
.github/workflows/: build.yml
src/: application_error.rs  error.rs  find_all_nodes.rs  is_scratchpad.rs  lib.rs  main.rs  node_ext.rs  node_traits.rs  tree_error.rs  workflow.rs  workspace.rs
tests/: move_container_to_next.rs  move_container_to_prev.rs  move_focus_to_next.rs  move_focus_to_prev.rs  shift_successors.rs
tests/node_builder/: mod.rs  node.rs
