[package]
name = "sway-workspace-extras"
version = "0.1.1"
edition = "2021"
description = "A set of commands to move focus or containers to new Sway workspaces"
authors = ["Thomas Himmelstoss <9889638+tfkhim@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/tfkhim/sway-workspace-extras/"

[dependencies]
clap = {version="4.5.4", features=["derive"] }
swayipc = "3.0.2"
thiserror = "1.0.61"

[profile.release]
lto = true
