[package]
name = "sway-workspace-extras"
version = "0.1.1"
edition = "2021"
description = "A set of commands to move focus or containers to new Sway workspaces"
authors = ["Thomas Himmelstoss <9889638+tfkhim@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/tfkhim/sway-workspace-extras/"

[dependencies]
clap = {version="4.5.40", features=["derive"] }
swayipc = "3.0.3"
thiserror = "2.0.12"

[profile.release]
lto = true
